# controllers/actorController.js
@@ -148,4 +148,103 @@ const createActor = async (req, res, next) => {
         next(error)
     }
 }
-module.exports = { findAll, findById, findByQuery, createActor }
+
+const updateActorById = async (req, res, next) => {
+    // #swagger.description = "Update a particular actor by ID"
+    // #swagger.tags = ["actors"]
+    // #swagger.security = [{openID: []}]
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json({
+                success: false,
+                message: "Invalid ID format"
+            })
+        }
+        const id = req.params.id
+
+        const { firstName, lastName, gender, character, dateOfBirth, nationality, firstAppearSeason, seasons } = req.body
+        if (!firstName || !lastName || !gender || !character || !firstAppearSeason || !seasons) {
+            return res.status(400).json({
+                success: false,
+                message: "The fields of firstName, lastName, gender, character, firstAppearSeason, seasons are required"
+            })
+        }
+
+        const actor = { firstName, lastName, gender, character, dateOfBirth, nationality, firstAppearSeason, seasons }
+
+        const result = await Actor.findByIdAndUpdate(id, actor, {new: true})
+        if (!result) {
+            return res.status(404).json({
+                success: false,
+                message: `Actor with ${req.params.id} not found`
+            })
+        }
+        return res.status(200).json({
+            success: true,
+            data: result,
+            message: `Actor with ID ${req.params.id} updated successfully`
+        })
+
+    } catch (error) {
+        next(error)
+    }
+}
+
+const deleteActorById = async (req, res, next) => {
+    /* #swagger.description = "Delete a particular actor by ID"
+    #swagger.tags = ["actors"]
+    #swagger.security = [{openID: []}] */
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json({
+                success: false,
+                message: "Invalid ID format"
+            })
+        }
+    
+        const id = new ObjectId(req.params.id)
+
+        const result = await Actor.findOneAndDelete({ _id: id })
+        if (result.deletedCount === 0) {
+            return res.status(404).json({
+                success: false,
+                message: "Actor not found"
+            })
+        }
+
+        return res.status(200).json({
+            success: true,
+            message: `Actor with ID ${req.params.id} deleted successfully`,
+            result
+        })
+        
+    
+    } catch (error) {
+        next(error)
+    }
+}
+
+const deleteAll = async (req, res, next) => {
+    /* #swagger.description = "Delete all actors in the actors collection"
+    #swagger.tags = ["actors"]
+    #swagger.security = [{openID: []}] */
+    try {
+        const result = await Actor.deleteMany({})
+        if (result.deletedCount === 0) {
+            return res.status(404).json({
+                success: false,
+                message: "No actors found to delete"
+            })
+        }
+        return res.status(200).json({
+            success: true,
+            message: "All actors deleted successfully",
+            result
+        })
+
+    } catch (error) {
+        next(error)
+    }
+}
+
+module.exports = { findAll, findById, findByQuery, createActor, updateActorById, deleteActorById, deleteAll }
